--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
-This is the world’s simplest website!
-This is the first exercise for our University of Waterloo web design class. Tuth be told this humble site is not that impressive but we have to take baby steps when learning HTML. Things start out fairly simple but as we learn different tags and their properties we’ll be able to structure content more efficiently.
-HTML vs. CSS
-In the first part of the semester we’ll focus entirely on structuring information with HTML. Only once we learn how to do that properly—it takes some practice—will we begin to apply graphic design principles to it. Learning proper HTML syntax is essential and your main job over the next month.
+<!DOCTYPE html>
+<html lang="en-CA">
+<head>
+  <meta charset="UTF-8">
+  <title>GitHub Setup</title>
+  <!-- Made by Gillian Young on 06-10 -->
+  <style>
+  body 
+    {background-color:ADD8E6}
+  </style>
+  </head>
+   <body>
+   <img src="Untitled-1.png" alt="Meme reflecting my outlook">
+   <h1> Gillian Young</h1>
+   <h2>GitHub Setup Complete!</h2>
+       <body>
